Fixed a bug with jumping scrolling

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+html {
+  padding-right: var(--scroll-width);
+}
+
 #root {
   position: relative;
   z-index: -2;
@@ -5,6 +9,7 @@
   max-width: 100vw;
   min-height: 100vh;
   background: url(../public/background.jpg);
+  box-sizing: border-box;
 
   --overlay-: rgba(18, 24, 38, 0.5);
   --rich-b-: #000411;
@@ -17,6 +22,7 @@ body {
   position: relative;
   z-index: -1;
   font-family: "Nunito";
+  overflow-x: hidden;
 }
 
 .wrapper {
@@ -26,7 +32,6 @@ body {
   max-width: 1280px;
   min-height: 100vh;
   margin: 0 auto;
-  padding: 0 15px;
   box-sizing: border-box;
 }
 
